# doorlocker-server/src/main/kotlin/com/seasam/doorlocker/domain/Permission.kt
@@ -2,9 +2,7 @@ package com.seasam.doorlocker.domain
 
 import java.time.LocalDateTime
 
-data class Permission(
-    val thingId: ThingId,
-    val grantedBy: UserId) {
+data class Permission(val userId: UserId) {
 
     val timestamp: LocalDateTime = LocalDateTime.now()
 }
